--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,4 +5,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"/>
+        tools:context=".activities.MainActivity">
+
+    <fragment android:id="@+id/navHost"
+              android:name="androidx.navigation.fragment.NavHostFragment"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              app:navGraph="@navigation/navigation"
+              app:defaultNavHost="true"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
