--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -15,5 +15,11 @@
                                        android:elevation="5dp"
                                        android:clipToPadding="false"
                                        app:layout_constraintTop_toTopOf="parent"/>
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_width="wrap_content"
+                                                                           android:layout_height="wrap_content"
+                                                                           android:layout_marginBottom="8dp"
+                                                                           app:layout_constraintBottom_toBottomOf="parent"
+                                                                           app:layout_constraintEnd_toEndOf="parent"
+                                                                           android:layout_marginEnd="8dp"
+                                                                           android:src="@drawable/ic_my_location"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
