--- a/app/src/main/res/menu/map_toolbar_menu.xml
+++ b/app/src/main/res/menu/map_toolbar_menu.xml
@@ -1,3 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/sync"
+          android:title="Sync"
+          app:showAsAction="ifRoom"
+          android:icon="@drawable/ic_sync"/>
 </menu>
