--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -15,7 +15,9 @@
                                        android:elevation="5dp"
                                        android:clipToPadding="false"
                                        app:layout_constraintTop_toTopOf="parent"/>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_width="wrap_content"
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/locate_device_btn"
+                                                                           android:layout_width="wrap_content"
                                                                            android:layout_height="wrap_content"
                                                                            android:layout_marginBottom="8dp"
                                                                            app:layout_constraintBottom_toBottomOf="parent"
