--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,16 +5,19 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    tools:context=".fragments.MapFragment">
+    <com.mapbox.mapboxsdk.maps.MapView android:id="@+id/mapView"
+                                       android:layout_width="match_parent"
+                                       android:layout_height="match_parent"/>
 
     <androidx.appcompat.widget.Toolbar android:id="@+id/mapToolbar"
                                        android:layout_width="match_parent"
                                        android:layout_height="?attr/actionBarSize"
-                                       android:background="@drawable/map_toolbar_background"
                                        android:layout_margin="10dp"
-                                       android:layout_marginTop="8dp"
-                                       android:elevation="5dp"
+                                       android:elevation="4dp"
                                        android:clipToPadding="false"
+                                       android:background="@drawable/map_toolbar_background"
                                        app:layout_constraintTop_toTopOf="parent"/>
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/locate_device_btn"
                                                                            android:layout_width="wrap_content"
@@ -24,4 +27,5 @@
                                                                            app:layout_constraintEnd_toEndOf="parent"
                                                                            android:layout_marginEnd="8dp"
                                                                            android:src="@drawable/ic_my_location"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
