--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -13,6 +13,6 @@
                 app:destination="@id/settingsFragment"/>
     </fragment>
     <fragment android:id="@+id/settingsFragment"
-              android:name="com.example.apatormapbox.SettingsFragment"
+              android:name="com.example.apatormapbox.fragments.SettingsFragment"
               android:label="SettingsFragment"/>
 </navigation>
