--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <Preference
-            android:title="synchronization"
+            android:title="Synchronization"
+            android:icon="@drawable/ic_sync"
             android:key="sync"
             android:summary="Sync Now"/>
     <EditTextPreference
+            android:icon="@drawable/ic_key"
             android:title="Your API"
             android:key="userAPI"
             android:summary="Please provide your API"/>
     <ListPreference
+            android:icon="@drawable/ic_access_time"
             android:title="Window Time"
             android:summary="Select window time."
             android:key="timeWindow"
