--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -3,18 +3,18 @@
     <Preference
             android:title="Synchronization"
             android:icon="@drawable/ic_sync"
-            android:key="sync"
-            android:summary="Sync Now"/>
+            android:key="@string/sync_key"
+            android:summary="Last Synchronization: 1997/04/15 10:10:10"/>
     <EditTextPreference
             android:icon="@drawable/ic_key"
             android:title="Your API"
-            android:key="userAPI"
+            android:key="@string/userAPI_key"
             android:summary="Please provide your API"/>
     <ListPreference
             android:icon="@drawable/ic_access_time"
             android:title="Window Time"
             android:summary="Select window time."
-            android:key="timeWindow"
+            android:key="@string/timeWindow_key"
             android:defaultValue="false"
             android:entries="@array/listPreference"
             android:entryValues="@array/listValues"/>
