--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -3,19 +3,19 @@
     <Preference
             android:title="Synchronization"
             android:icon="@drawable/ic_sync"
-            android:key="@string/sync_key"
+            android:key="@string/sync_preference"
             android:summary="Last Synchronization: 1997/04/15 10:10:10"/>
     <EditTextPreference
             android:icon="@drawable/ic_key"
             android:title="Your API"
-            android:key="@string/userAPI_key"
+            android:key="@string/api_key_preference"
             android:summary="Please provide your API"/>
     <ListPreference
             android:icon="@drawable/ic_access_time"
             android:title="Window Time"
             android:summary="Select window time."
-            android:key="@string/timeWindow_key"
+            android:key="@string/time_window_preference"
             android:defaultValue="false"
-            android:entries="@array/listPreference"
-            android:entryValues="@array/listValues"/>
+            android:entries="@array/timeWindowLabels"
+            android:entryValues="@array/timeWindowValues"/>
 </PreferenceScreen>
