Częsciowo zriobiony paszport + jeden wykres

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -20,5 +20,8 @@
     <fragment android:id="@+id/paszportFragment"
               android:name="com.example.apatormapbox.fragments.PaszportFragment"
               android:label="fragment_paszport"
-              tools:layout="@layout/fragment_paszport"/>
+              tools:layout="@layout/fragment_paszport">
+        <action android:id="@+id/action_paszportFragment_to_mapFragment"
+                app:destination="@id/mapFragment"/>
+    </fragment>
 </navigation>
