--- a/app/src/main/res/layout/fragment_paszport.xml
+++ b/app/src/main/res/layout/fragment_paszport.xml
@@ -126,16 +126,7 @@
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/location_value_PF2"/>
-            <TextView
-                    android:text="@string/value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/solarRF_value_PF"
-                    app:layout_constraintStart_toStartOf="@+id/guideline"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/distance_value_PF2"/>
+                    app:layout_constraintTop_toBottomOf="@+id/location_value_PF"/>
             <TextView
                     android:text="@string/value"
                     android:layout_width="wrap_content"
@@ -144,7 +135,7 @@
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/solarRF_value_PF"/>
+                    app:layout_constraintTop_toBottomOf="@+id/distance_value_PF2"/>
             <TextView
                     android:text="@string/value"
                     android:layout_width="wrap_content"
@@ -169,7 +160,7 @@
                     android:text="@string/value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/location_value_PF2"
+                    android:id="@+id/location_value_PF"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
@@ -237,15 +228,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/state_textView_PF"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="105dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/solarRF_textView_PF"/>
-            <TextView
-                    android:text="@string/SolarRF_textView_PF"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/solarRF_textView_PF"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="105dp"
                     android:layout_marginTop="8dp"
