--- a/app/src/main/res/layout/fragment_paszport.xml
+++ b/app/src/main/res/layout/fragment_paszport.xml
@@ -122,7 +122,7 @@
                     android:text="@string/value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/distance_value_PF2"
+                    android:id="@+id/distance_value_PF"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
@@ -131,11 +131,11 @@
                     android:text="@string/value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/state_value_PF2"
+                    android:id="@+id/state_value_PF"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/distance_value_PF2"/>
+                    app:layout_constraintTop_toBottomOf="@+id/distance_value_PF"/>
             <TextView
                     android:text="@string/value"
                     android:layout_width="wrap_content"
@@ -144,7 +144,7 @@
                     app:layout_constraintStart_toStartOf="@+id/guideline"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/state_value_PF2"
+                    app:layout_constraintTop_toBottomOf="@+id/state_value_PF"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginBottom="8dp"/>
             <TextView
