Dodano: - chwilowe obejscie bledu w ustawieniach - nowa ikona do obejscia bledu - dzialajacy przycisk ustawienia kamery na nasza lokalizacje --- sypie bledem w przypadku klikniecia w ustawienia i cofniecia przyciskiem

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -20,7 +20,10 @@
     </fragment>
     <fragment android:id="@+id/settingsFragment"
               android:name="com.example.apatormapbox.fragments.SettingsFragment"
-              android:label="SettingsFragment"/>
+              android:label="SettingsFragment">
+        <action android:id="@+id/action_settingsFragment_to_mapFragment"
+                app:destination="@id/mapFragment"/>
+    </fragment>
     <fragment android:id="@+id/paszportFragment"
               android:name="com.example.apatormapbox.fragments.PassportFragment"
               android:label="fragment_paszport"
