--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -18,4 +18,9 @@
             android:defaultValue="false"
             android:entries="@array/timeWindowLabels"
             android:entryValues="@array/timeWindowValues"/>
+    <Preference
+            android:title="Save and Exit"
+            android:icon="@drawable/ic_save"
+            android:key="save_and_exit"
+            android:summary=""/>
 </PreferenceScreen>
