--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -6,31 +6,39 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-    <EditText
-            android:id="@+id/longitude_CL"
-            android:hint="@string/longitude_CL"
-            android:inputType="textPersonName"
+    <TextView
+            android:text="@string/choice_textView_AD"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autofillHints=""/>
-    <EditText
-            android:id="@+id/latitude_CL"
-            android:hint="@string/latitude_CL"
-            android:inputType="textEmailAddress"
+            android:id="@+id/choice_textView_AD"
+            android:visibility="visible"
+            android:textSize="24sp"
+            android:layout_gravity="center"
+            android:padding="8dp"
+            android:textAlignment="center"/>
+    <TextView
+            android:text="@string/value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autofillHints=""/>
-
+            android:id="@+id/first_solar_AD"
+            android:textSize="16sp"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:padding="8dp"/>
+    <TextView
+            android:text="@string/value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/second_solar_AD"
+            android:textSize="16sp"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:padding="8dp"/>
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center">
-        <Button
-                android:id="@+id/change_btn_CL"
-                android:text="@string/change_btn_CL"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
         <Button
                 android:id="@+id/cancel_btn_CL"
                 android:text="@string/cancel_btn_CL"
