App now don't crash when going into PassportFragment with wrong API

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -8,11 +8,11 @@
         <item>1 Year</item>
     </string-array>
 
-    <integer-array name="timeWindowValues">
+    <string-array name="timeWindowValues">
         <item>1</item>
         <item>2</item>
         <item>3</item>
         <item>4</item>
         <item>5</item>
-    </integer-array>
+    </string-array>
 </resources>
