--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -3,9 +3,11 @@
     <string-array name="timeWindowLabels">
         <item>1 Day</item>
         <item>2 Day</item>
-        <item>1 Week</item>
-        <item>1 Month</item>
-        <item>1 Year</item>
+        <item>3 Day</item>
+        <item>4 Day</item>
+        <item>5 Day</item>
+        <item>6 Day</item>
+        <item>7 Day</item>
     </string-array>
 
     <string-array name="timeWindowValues">
@@ -14,5 +16,7 @@
         <item>3</item>
         <item>4</item>
         <item>5</item>
+        <item>6</item>
+        <item>7</item>
     </string-array>
 </resources>
